# =============================================================================
#  R E P S   ·   test-lang
# =============================================================================
[package]
name    = "test-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Compiler snapshot test harness for tokens, ASTs, and errors."

# Keywords (5 max)
keywords = ["compiler", "language", "testing", "snapshot"]

# Categories
categories = ["development-tools", "development-tools::testing"]

# Links
homepage      = "https://github.com/jamesgober/test-lang"
repository    = "https://github.com/jamesgober/test-lang"
documentation = "https://docs.rs/test-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "test_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Links the standard library. With this off, the crate is `no_std` + `alloc`;
# the `Error` impl comes from `core::error::Error` either way.
std = []


# DEPENDENCIES
# #################################
# No runtime dependencies: the harness works over `core::fmt` and `alloc` only.
[dependencies]


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
